Aggiunte Sezioni Prodotto
Aggiunte sezioni Qualità di Prodotto, Scadenze e Metriche per il Prodotto

--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
@@ -3,17 +3,13 @@
 
 \input{../../util/hx-ambiente}
 
-\version{0.0.0}
+\version{0.0.1}
 \creaz{28 dicembre 2016}
 \author{\LS, \AZ}
 \supervisor{verificatori}
 \uso{esterno}
-\dest{Prof. Tullio Vardanega, Zucchetti S.P.A.}
+\dest{\TV, \ZU}
 \title{Piano di Qualifica}
-
-\renewcommand{\arraystretch}{1.5}
-\setcounter{tocdepth}{4}
-\setcounter{secnumdepth}{4}
 
 \begin{document}
 \maketitle
@@ -23,44 +19,45 @@
 
 \section{Introduzione}
 	\subsection{Scopo del documento}
-	Questo documento ha lo scopo di fissare le strategie di verifica e validazione che il gruppo {\hx} ha deciso di adottare per perseguire gli obiettivi di qualità di processo e di prodotto relativi al progetto {\proj}. Il presente documento si propone di descrivere l'approccio del gruppo alle diverse fasi di verifica per poter ottenere il miglior risultato auspicabile in termini di qualità. Per perseguire tali obiettivi e risultati occorre verificare continuamente le attività svolte in modo da individuare e correggere velocemente le anomalie, minimizzando così l'utilizzo di risorse e allo stesso tempo mantenendo la correttezza del prodotto.
+	Questo documento ha lo scopo di fissare le strategie di verifica e validazione che il gruppo \hx{} ha deciso di adottare per perseguire gli obiettivi di qualità di processo e di prodotto relativi al progetto \proj{}. Il presente documento si propone di descrivere l'approccio del gruppo alle diverse fasi di verifica per poter ottenere il miglior risultato auspicabile in termini di qualità. Per perseguire tali obiettivi e risultati occorre verificare continuamente le attività svolte in modo da individuare e correggere velocemente le anomalie, minimizzando così l'utilizzo di risorse e allo stesso tempo mantenendo la correttezza del prodotto.
 
 	\subsection{Scopo del prodotto}
-	Lo scopo del prodotto è di implementare un editor \gloss{UML} che consenta, a partire dai diagrammi realizzati dall’utente, di generare il codice dell'applicazione da essi descritta, appartenente ad un determinato dominio applicativo: i giochi da tavolo. 
-Il prodotto permetterà all’utente di realizzare l’applicativo desiderato utilizzando due tipologie di diagrammi ispirati ai diagrammi delle classi e delle attività UML, modificati appositamente per guidarlo nella progettazione dell'applicazione e agevolare la successiva generazione del codice, consentendo così una maggior qualità e strutturazione del codice stesso e di conseguenza un prodotto finito migliore.
-L'editor dovrà essere fruibile dall'utente attraverso un browser desktop idoneo all'utilizzo delle tecnologie \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript}, e il frutto del generatore di codice sarà scritto in \gloss{Java}.
+	Lo scopo del prodotto è di implementare un editor \gloss{UML} che consenta, a partire dai diagrammi realizzati dall'utente, di generare il codice dell'applicazione da essi descritta, appartenente ad un determinato dominio applicativo: i giochi da tavolo. 
+	Il prodotto permetterà all'utente di realizzare l'applicativo desiderato utilizzando due tipologie di diagrammi ispirati ai diagrammi delle classi e delle attività UML, modificati appositamente per guidarlo nella progettazione dell'applicazione e agevolare la successiva generazione del codice, consentendo così una maggior qualità e strutturazione del codice stesso e di conseguenza un prodotto finito migliore.
+	L'editor dovrà essere fruibile dall'utente attraverso un browser desktop idoneo all'utilizzo delle tecnologie \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript}, e il frutto del generatore di codice sarà scritto in \gloss{Java}.
 
 	\subsection{Glossario}
-	Per rendere più semplice e chiara la comprensione e di evitare ogni ambiguità relativa al linguaggio e ai termini utilizzati nei documenti, viene allegato il Glossario v_1_0_0 nel quale vengono raccolte le spiegazioni di termini tecnici o ambigui, di acronimi o abbreviazioni. Per rendere più facile la lettura, i termini presenti nel glossario saranno marcati con il pedice.
+	Per rendere più semplice e chiara la comprensione e di evitare ogni ambiguità relativa al linguaggio e ai termini utilizzati nei documenti, viene allegato il \Glossario nel quale vengono raccolte le spiegazioni di termini tecnici o ambigui, di acronimi o abbreviazioni. Per rendere più facile la lettura, i termini presenti nel glossario saranno marcati con il pedice g.
 	
 	\subsection{Riferimenti}
 		\subsubsection{Normativi}
 		\begin{itemize}
-			\item \textit{Norme di Progetto v1.00}
-			\item \textit{Capitolato d'Appalto C6}:
-			\\ \href{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf}{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf};
-			\item \textit{Standard ISO/IEC 12207:2008:}
-			\\ \href{http://ieeexplore.ieee.org/document/4475826/}{http://ieeexplore.ieee.org/document/4475826/};
-			\item \textit{Standard ISO/IEC 15504:}
-			\\ \href{https://en.wikipedia.org/wiki/ISO/IEC_15504}{https://en.wikipedia.org/wiki/ISO/IEC_15504};
-			\item \textit{Standard ISO/IEC 9126:}
-			\\ \href{https://it.wikipedia.org/wiki/ISO/IEC_9126}{https://it.wikipedia.org/wiki/ISO/IEC_9126};
-			\item \textit{PDCA(Plan-Do-Check-Act):}
-			\\ \href{https://it.wikipedia.org/wiki/Ciclo_di_Deming}{https://it.wikipedia.org/wiki/Ciclo_di_Deming}.
+			\item \emph{\NdP};
+			\item \textbf{Capitolato d'Appalto C6: \proj}:
+			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf};
+			\item \textbf{Standard ISO/IEC 12207:2008:}
+			\\ \url{http://ieeexplore.ieee.org/document/4475826/};
+			\item \textbf{Standard ISO/IEC 15504:}
+			\\ \url{https://en.wikipedia.org/wiki/ISO/IEC_15504};
+			\item \textbf{Standard ISO/IEC 9126:}
+			\\ \url{https://it.wikipedia.org/wiki/ISO/IEC_9126};
+			\item \textbf{PDCA(Plan-Do-Check-Act):}
+			\\ \url{https://it.wikipedia.org/wiki/Ciclo_di_Deming}.
 		\end{itemize}
+		
 		\subsubsection{Informativi}
 		\begin{itemize}
-			\item \textit{Analisi dei Requisiti v1_0_0;}
-			\item \textit{Piano di Progetto v1.00;}
-			\item \textit{Glossario v1.00;}
-			\item \textit{Indice di Gulpease:}
-			\\ \href{http://it.wikipedia.org/wiki/Indice_Gulpease}{http://it.wikipedia.org/wiki/Indice_Gulpease};
-			\item \textit{Regole del Progetto Didattico:}
-			\\ \href{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf}{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf};
-			\item \textit{Slide Qualità del Software:}
-			\\ \href{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L10.pdf}{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L10.pdf};
-			\item \textit{Slide Qualità del Prodotto:}
-			\\ \href{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L11.pdf}{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L11.pdf}.
+			\item \textbf{Analisi dei Requisiti: }\emph{\AdR};
+			\item \textbf{Piano di Progetto: }\emph{\PdP};
+			\item \textbf{Glossario: }\emph{\Glossario};
+			\item \textbf{Indice di Gulpease:}
+			\\ \url{http://it.wikipedia.org/wiki/Indice_Gulpease};
+			\item \textbf{Regole del Progetto Didattico:}
+			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf};
+			\item \textbf{Slide Qualità del Software:}
+			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L10.pdf};
+			\item \textbf{Slide Qualità del Prodotto:}
+			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L11.pdf}.
 		\end{itemize}
 \newpage
 \section{Visione generale della strategia di gestione della qualità}
@@ -81,10 +78,67 @@ L'editor dovrà essere fruibile dall'utente attraverso un browser desktop idoneo
 			\paragraph{Processo di Verifica del Software}
 				\subparagraph{Copertura codice}
 	\subsection{Qualità di prodotto}
+	Per garantire una buona qualità di prodotto, il gruppo \hx{} ha individuato dallo standard ISO/IEC 9126:2001 le qualità che ritiene di maggior importanza durante il ciclo di vita del prodotto e ha individuato gli obiettivi e le metriche coerenti con i livelli di qualità stabiliti.
 		\subsubsection{Standard adottato}
+		Lo Standard ISO/IEC 9126:2001 si articola in quattro parti:
+		\begin{enumerate}
+		\item Modello della qualità del software (9126-1);
+			\item Metriche per la qualità esterna (9126-2);
+			\item Metriche per la qualità interna (9126-3);
+			\item Metriche per la qualità in uso (9126-4).
+		\end{enumerate}
+		Lo standard analizza la qualità del software sotto tre diversi punti di vista:
+		\begin{itemize}
+			\item \textbf{Qualità interna}: è la qualità del prodotto software che fa riferimento alle caratteristiche implementative del software come l'architettura e il codice derivante da quest'ultima.
+			\item \textbf{Qualità esterna}: è la qualità del prodotto software relativa a quando esso viene eseguito e testato in un ambiente di prova. 
+			\item \textbf{Qualità in uso}: è la qualità del prodotto software dal lato dell'utilizzatore che utilizza tale prodotto all'interno di uno specifico sistema.
+		\end{itemize}
+			\paragraph{Modello della qualità del software}
+			Nella prima parte dello standard vengono presentati i modelli per la qualità esterna, interna ed in uso.
+				\subparagraph{Modello della qualità esterna ed interna}
+				Il modello di qualità esterna ed interna sancito nella prima parte dello standard è suddiviso in sei caratteristiche generali misurabili attraverso delle metriche:
+				\begin{itemize}
+					\item \textbf{funzionalità}: è la capacità del software di fornire le funzioni che soddisfano determinate esigenze, necessarie per operare in determinate condizioni. 
+					\item \textbf{affidabilità}: rappresenta la capacità del prodotto software di mantenere uno specifico livello di prestazioni quando viene usato in certe condizioni e per un periodo di tempo determinato.
+					\item \textbf{usabilità}: è la capacità di un prodotto software di essere facilmente comprensibile e attraente in ogni sua parte per un utente qualsiasi. Un software è considerato usabile proporzionalmente alla facilità con cui un utente opera per sfruttare al massimo le funzionalità che il software mette a disposizione.
+					\item \textbf{efficienza}: è la capacità di un prodotto di eseguire le funzioni richieste nel minor tempo possibile ed utilizzando le risorse necessarie nel modo migliore.
+					\item \textbf{manutenibilità}: rappresenta la capacità di un prodotto software di essere modificato in tempi rapidi e a costi accessibili. Le modifiche possono riguardare correzioni o adattamenti del prodotto a variazioni negli ambienti, nei requisiti e nelle specifiche funzionali.
+					\item \textbf{portabilità}: è la capacità di un prodotto software di poter essere spostato da un ambiente all'altro velocemente. L'ambiente include sia aspetti hardware che software.
+				\end{itemize}
+				
+				\subparagraph{Modello della qualità in uso}
+				Gli attributi presenti nel modello relativo alla qualità del software in uso sono rappresentati da quattro grandi categorie:
+				\begin{itemize}
+					\item \textbf{efficacia}: è la capacità di consentire all'utente di raggiungere obiettivi specifici con precisione e completezza.
+					\item \textbf{produttività}: la produttività di un prodotto software rappresenta la capacità di permettere all'utente di utilizzare un numero stabilito di risorse, in relazione all'efficienza raggiunta in uno specifico contesto di utilizzo.
+					\item \textbf{sicurezza fisica}: la sicurezza fisica di un prodotto software è la capacità di raggiungere un livello accettabile di rischio di danni a dati, persone, proprietà o ambienti.
+					\item \textbf{soddisfazione}: la soddisfazione di un prodotto software rappresenta la capacità di soddisfare gli utenti.
+				\end{itemize}
+			\paragraph{Metriche per la qualità del software}
+			Nelle restanti tre parti vengono trattate le metriche per la qualità esterna, interna e in uso.
+				\subparagraph{Metriche per la qualità esterna}
+				Le metriche esterne misurano i comportamenti del software che si possono rilevare dai test, dall'operatività e dall'osservazione durante la sua esecuzione sulla base degli obiettivi stabiliti. Le metriche esterne sono scelte in base alle caratteristiche che il prodotto finale dovrà dimostrare una volta utilizzato.
+				\subparagraph{Metriche per la qualità interna}
+				Le metriche interne si applicano al software non eseguibile (un esempio è il codice sorgente) e alla documentazione. Le misure effettuate permettono di prevedere il livello di qualità esterna ed in uso del prodotto finale poiché gli attributi interni influenzano le caratteristiche esterne e quelle in uso.
+				\subparagraph{Metriche per la qualità in uso}
+				Le metriche della qualità in uso valutano il livello con cui il software consente agli utenti di svolgere le proprie attività con efficacia, produttività, sicurezza e soddisfazione nel contesto operativo previsto.
 		\subsubsection{Procedure per il controllo delle qualità di prodotto}
+		Il controllo di qualità del prodotto verrà garantito da:
+		\begin{itemize}
+			\item \textbf{quality assurance}: l'insieme di attività realizzate per garantire il raggiungimento degli obiettivi di qualità. Tali attività prevedono la realizzazione di tecniche di analisi statica e dinamica.
+			\item \textbf{verifica}: il processo che stabilisce se il prodotto in uscita da una fase è consistente, corretto e completo. Per tutta la durata del progetto verranno svolte attività di verifica.
+			\item \textbf{validazione}: la conferma oggettiva che il sistema soddisfa i requisiti.
+		\end{itemize}
 		\subsubsection{Obiettivi di qualità del prodotto}
+		Gli obiettivi di qualità del software che il gruppo \hx{} desidera raggiungere nell'arco del progetto sono un sottoinsieme di quelli enunciati nello standard ISO/IEC 9126:2001:
+		\begin{itemize}
+			\item il prodotto possiede le funzionalità descritte all'interno dei requisiti obbligatori e gran parte di funzionalità descritte all'interno dei requisiti desiderabili - \ref{S1};
+			\item il prodotto è testato negli aspetti più importanti e in determinate situazioni nelle quali esso si può trovare - \ref{S2};
+			\item il prodotto presenta codice senza elevati gradi di complessità relativamente ad alcuni vincoli definiti – \ref{S3};
+			\item il codice risulta manutenibile e facilmente comprensibile – \ref{S4};
+		\end{itemize}
 	\subsection{Scadenze temporali}
+	Le scadenze temporali stabilite dal gruppo sono definite in dettaglio nel documento \PdP.
 \newpage
 \section{La strategia di gestione della qualità nel dettaglio}
 	\subsection{Risorse}
@@ -109,8 +163,151 @@ L'editor dovrà essere fruibile dall'utente attraverso un browser desktop idoneo
 			\paragraph{Indice Gulpease}
 			\paragraph{Copertura Codice}
 	\subsection{Metriche per il prodotto}
-		\paragraph{Requisiti obbligatori soddisfatti}
-		\paragraph{Requisiti desiderabili soddisfatti}
+		\subsubsection{Funzionalità \label{S1}}
+		Per quanto riguarda l'aspetto funzionale del software, si è scelto di seguire determinate metriche riguardanti il rispetto dei requisiti, obbligatori e desiderabili.
+			\paragraph{Copertura Requisiti obbligatori}
+			Questa metrica permette di verificare in ogni momento lo stato dei requisiti obbligatori coperti. Essa rappresenta il rapporto tra i requisiti obbligatori soddisfatti e il numero totale di requisiti obbligatori ricavati.
+			La misura viene effettuata nel modo seguente:
+			% EQUAZIONE
+			I range stabiliti per la metrica sono i seguenti:
+			\begin{itemize}
+				\item Range ottimale:;
+				\item Range di accettazione:;
+			\end{itemize}
+			
+			\paragraph{Copertura Requisiti desiderabili}
+			Tale metrica permette di verificare in ogni momento lo stato dei requisiti desiderabili coperti. Essa rappresenta il rapporto tra i requisiti desiderabili soddisfatti e il numero totale di requisiti desiderabili ricavati.
+			La misura viene effettuata nel modo seguente:
+			% EQUAZIONE
+			I range stabiliti per la metrica sono i seguenti:
+			\begin{itemize}
+				\item Range ottimale:;
+				\item Range di accettazione:;
+			\end{itemize}
+		\subsubsection{Affidabilità \label{S2}}
+		Per quanto concerne l'affidabilità del prodotto software, il gruppo ha ritenuto importante la valutazione dei test, i quali ricoprono quindi un ruolo essenziale nel ciclo di vita del software.
+			\paragraph{Test superati}
+			Tale metrica indica la percentuale di test superati.
+			La misura viene effettuata nel modo seguente:
+			% EQUAZIONE
+			I range stabiliti per la metrica sono i seguenti:
+			\begin{itemize}
+				\item Range ottimale:;
+				\item Range di accettazione:;
+			\end{itemize}
+		\subsubsection{Efficienza \label{S3}}
+		Il gruppo \hx{} ha deciso di seguire metriche relative all'efficienza del software riguardanti taluni vincoli che il codice deve rispettare.
+			\paragraph{Profondità di annidamento}
+			Tale metrica è una misura della profondità di annidamento delle istruzioni \textit{if}/cicli \textit{for} in un programma. Istruzioni \textit{if}/cicli \textit{for} profondamente annidati sono difficili da comprendere e portano potenzialmente all'errore.
+			I range stabiliti per la metrica sono i seguenti:
+			\begin{itemize}
+				\item Range ottimale:;
+				\item Range di accettazione:;
+			\end{itemize}
+			
+			\paragraph{Chiamate innestate di metodi}
+			Tale metrica è una misura del numero di chiamate innestate di metodi in un particolare metodo. Un grande numero di chiamate innestate di metodi può portare alla saturazione dello stack, soprattutto in caso di un grande numero di parametri, quindi è necessario limitarne il numero.
+			I range stabiliti per la metrica sono i seguenti:
+			\begin{itemize}
+				\item Range ottimale:;
+				\item Range di accettazione:;
+			\end{itemize}
+		\subsubsection{Manutenibilità \label{S4}}
+		Per garantire un elevato grado di manutenibilità, si è deciso adottare un discreto numero di metriche che spaziano in diversi aspetti del programma.
+			\paragraph{Numero di statement per metodo}
+			Tale metrica è una misura del numero di statement di un particolare metodo. Avere un numero di statement per metodo relativamente basso permette di tenere un livello di manutenibilità del codice accettabile.
+			I range stabiliti per la metrica sono i seguenti:
+			\begin{itemize}
+				\item Range ottimale:;
+				\item Range di accettazione:;
+			\end{itemize}
+			
+			\paragraph{Numero di parametri per metodo}
+			La metrica è la misura del numero totale di parametri formali in ingresso di un particolare metodo. Se il numero di parametri è elevato, lo stack del programma può essere riempito rapidamente in caso di multiple chiamate innestate e il metodo può risultare difficilmente comprensibile e manutenibile; inoltre ciò potrebbe indicare un metodo troppo complesso e non efficacemente suddiviso in sotto-metodi.
+			I range stabiliti per la metrica sono i seguenti:
+			\begin{itemize}
+				\item Range ottimale:;
+				\item Range di accettazione:;
+			\end{itemize}
+			
+			\paragraph{Numero di campi dati per classe}
+			La metrica permette di verificare che il numero di campi dati appartenenti ad una determinata classe rientri tra i valori stabiliti. Questo consente di stimare il grado di manutenibilità e comprensibilità del codice e verificane l'accettabilità.
+			I range stabiliti per la metrica sono i seguenti:
+			\begin{itemize}
+				\item Range ottimale:;
+				\item Range di accettazione:;
+			\end{itemize}
+			
+			\paragraph{Numero di metodi per classe}
+			Tale metrica indica il numero di metodi definiti in una classe. Un valore molto alto potrebbe indicare una cattiva decomposizione delle funzionalità a livello di progettazione. 
+			I range stabiliti per la metrica sono i seguenti:
+			\begin{itemize}
+				\item Range ottimale:;
+				\item Range di accettazione:;
+			\end{itemize}
+			
+			\paragraph{Grado di accoppiamento}
+			Tale metrica è una misura del numero di dipendenze di una classe con le altre contenute all'interno del suo stesso package. Avere poche dipendenze tra classi implica che ci sia un maggiore grado di disaccoppiamento. Questo aumenta molto la manutenibilità e la comprensibilità del codice.
+			I range stabiliti per la metrica sono i seguenti:
+			\begin{itemize}
+				\item Range ottimale:;
+				\item Range di accettazione:;
+			\end{itemize}
+			
+			\paragraph{Complessità ciclomatica}
+			La metrica rappresenta la complessità di funzioni, moduli, metodi o classi di un programma. Essa esprime il numero di cammini linearmente indipendenti presenti all'interno del codice. Alti valori di complessità ciclomatica sottintendono una ridotta manutenibilità del codice. Valori bassi di complessità ciclomatica potrebbero delineare una scarsa efficienza dei metodi.
+			La misura viene effettuata nel modo seguente:
+			%Cyclomatic Number = e − n + 2p
+			%e = numero di archi;
+			%n = numero di nodi;
+			%p = numero di componenti connesse.
+			I range stabiliti per la metrica sono i seguenti:
+			\begin{itemize}
+				\item Range ottimale:;
+				\item Range di accettazione:;
+			\end{itemize}
+			
+			\paragraph{Lunghezza media di un modulo}
+			La metrica è una misura della dimensione media di un particolare modulo in termini di linee di codice. Difatti avere moduli di grandi dimensioni rende difficoltosa la manutenibilità e la comprensibilità del codice.
+			I range stabiliti per la metrica sono i seguenti:
+			\begin{itemize}
+				\item Range ottimale:;
+				\item Range di accettazione:;
+			\end{itemize}
+			
+			\paragraph{Fan-in}
+			Tale metrica è una misura del numero di funzioni o di metodi che chiamano una certa funzione o metodo.
+			Un alto valore di fan-in per una certa funzione implica che essa è strettamente legata al resto del progetto e che sue eventuali modifiche avranno ampi effetti a catena.
+			I range stabiliti per la metrica sono i seguenti:
+			\begin{itemize}
+				\item Range ottimale:;
+				\item Range di accettazione:;
+			\end{itemize}
+			
+			\paragraph{Fan-out}
+			Tale metrica è una misura del numero di funzioni o metodi che sono chiamati da una certa funzione o metodo. Un alto valore di fan-out per una certa funzione suggerisce che la sua complessità generale può essere alta a causa della complessità della logica di controllo necessaria per coordinare i componenti chiamati.
+			I range stabiliti per la metrica sono i seguenti:
+			\begin{itemize}
+				\item Range ottimale:;
+				\item Range di accettazione:;
+			\end{itemize}
+			
+			\paragraph{Rapporto linee di commento su linee di codice}
+			Tale metrica indica il rapporto tra linee di commento e linee di codice (escludendo le linee vuote).
+			Essa risulta utile per stimare la manutenibilità del codice dal momento che un'adeguata documentazione del codice ne permette una maggiore e più rapida comprensione.
+			I range stabiliti per la metrica sono i seguenti:
+			\begin{itemize}
+				\item Range ottimale:;
+				\item Range di accettazione:;
+			\end{itemize}
+			
+			\paragraph{Validazione W3C}
+			L'applicazione web deve superare correttamente il test di validazione offerto da W3C con un numero di errori gravi pari a zero. Gli avvisi e le inesattezze che non compromettono la funzionalità del sito sono accettate fino a un massimo di 20 per pagina.
+			I range stabiliti per la metrica sono i seguenti:
+			\begin{itemize}
+				\item Range ottimale:;
+				\item Range di accettazione:;
+			\end{itemize}
 \newpage
 \section{Test}
 
